// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a default Input 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`Input should render a disabled Input with a variant of fill 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--fill status--neutral quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          disabled=""
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`Input should render an Input with a label 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          id="UserName"
          type="text"
        />
        <label
          class="label label__status--neutral"
          for="UserName"
        >
          UserName
        </label>
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`Input should render an Input with a variant of outline 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`Input should render an Input with centered text 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--center input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`Input should render an Input with status messages 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    >
      <p
        class="quill-typography__caption-text__weight--regular__decoration--default quill-typography__color--prominent message__container__text message__container__text__status--neutral"
      >
        Message goes here
      </p>
      <p
        class="quill-typography__caption-text__weight--regular__decoration--default quill-typography__color--prominent self-end message__container__text message__container__text__status--neutral"
      >
        0/0
      </p>
    </div>
  </div>
</div>
`;
